2010-03-18  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebRequest.cs: Override both AllowWriteStreamBuffering,
	SupportsCookieContainer and UseDefaultCredentials (SL4 RC) new 
	properties. Fix restricted Cache-Control header (unit test).

2010-03-12  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebRequest[Internal].cs: Remove 'progress' field. It
	is now defined as an internal in WebRequest (System.Net).

2010-03-11  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebAsyncResult.cs, BrowserHttpWebRequest[Internal].cs,
	BrowserHttpWebResponse.cs: Sources moved from System.Windows.Browser.dll

2010-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserWebRequestCreate.cs: Not for desktop assemblies.
	* ClientWebRequestCreate.cs: Not for desktop assemblies.
	* WebRequestCreator.cs: Not for desktop assemblies.

2010-01-12  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserWebRequestCreate.cs: Add MIT.X11 header. Rename type to
	match MS (since they document to call GetType to know which stack
	is being used) and make it internal to match SL3 API. Use 
	reflection to create System.Windows.Browser.Net.BrowserHttpWebRequest
	from System.Windows.Browser.dll
	* ClientWebRequestCreate.cs: Add MIT.X11 header. Rename type to 
	match MS (since they document to call GetType to know which stack 
	is being used) and make it internal to match SL3 API. 
	* WebRequestCreator.cs: Adjust with new names.
