@@ -1,3 +1,8 @@
+2010-03-19  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* BrowserHttpWebRequest.cs: Throw a SecurityException if the 
+	request URI does not use HTTP[S]
+
 2010-03-18  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* BrowserHttpWebRequest.cs: Override both AllowWriteStreamBuffering,
